Fix Dashboard Page's scrollbars on windows/linux

--- a/app/pages/NotesPage/components/NoteViewer/NoteViewer.scss
+++ b/app/pages/NotesPage/components/NoteViewer/NoteViewer.scss
@@ -24,7 +24,7 @@ $note-contents-font-size: 0.9em;
 
   width:  100%;
   height: 100%;
-  overflow: scroll;
+  overflow-y: auto;
 
   padding: $viewer-padding;
 
