--- a/app/pages/NotesPage/components/NotesList/NotesList.scss
+++ b/app/pages/NotesPage/components/NotesList/NotesList.scss
@@ -29,7 +29,7 @@ $entry-height: 130px;
   .notes-list-entries {
     flex-grow: 1;
     z-index: 10;
-    overflow: scroll;
+    overflow-y: auto;
 
     @include themify { background-color: primary-color('light'); }
 
